--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -39,4 +39,4 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Start our platform
       run: |
-        python .\ComfyUI\main.py --port 8188 --listen
+        python3 wan2_cli.py start --path . --port 8188 --listen-all
