--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,6 +37,9 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Clone ComfyUI
+      run: |
+        git clone https://github.com/Comfy-Org/ComfyUI-Manager.git ComfyUI
     - name: Start our platform
       run: |
         python3 wan2_cli.py start --path . --port 8188 --listen-all
