--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,7 +29,7 @@ jobs:
         pip install torch==2.5.1+cu121 --extra-index-url https://download.pytorch.org/whl/cu121
         pip install torchvision==0.20.1+cu121 --extra-index-url https://download.pytorch.org/whl/cu121
         pip install torchaudio==2.5.1+cu121 --extra-index-url https://download.pytorch.org/whl/cu121
-        pip install flake8 pytest
+        pip install flake8 pytest ffmpeg
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
